<resources>
    <string name="app_name">Space</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="earth">Earth</string>

    <string name="something_went_wrong_try_again">Something went wrong\nTap to try again</string>

    <string name="popular">Popular</string>
    <string name="recent">Recent</string>
    <string name="apod">APOD</string>

    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_space">About Space</string>
    <string name="share">Share</string>
    <string name="apod_date">Astronomer picture of the day • %s</string>

    <string name="nasa">Nasa</string>

    <string name="see_the_day_before">See the day before</string>
    <string name="see_the_next_day">See the next day</string>
    <string name="search_for_any_date">Search for any date</string>

    <string name="date_range">Date range</string>
    <string name="media_types">Media types</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="search_for_caption">Search text</string>
    <string name="search_for_nasa_media">Search for &#8230; (e.g. \"Orion\")</string>
    <string name="search_for_apod">Search for Astronomer Picture of the day &#8230;</string>

    <string name="invalid_search_request">Select at least one media type, or type something to search for</string>

    <string name="description">Description</string>
    <string name="tap_for_more">Tap for more&#8230;</string>

    <string name="image_quality">Image quality</string>
    <string name="original_quality">Original\nSee the best quality possible. Warning, some images can be up to 10 MB, or more</string>
    <string name="high_definition_quality">High definition\nBetter quality, harder on data</string>
    <string name="standard_quality">Standard\nDefault setting, friendly on data while maintaining a good quality</string>
    <string name="low_quality">Low\nBest suited for poor connection</string>

    <string name="notifications">Notifications</string>
    <string name="notify_when_new_apod_available">Notify me, when a new Astronomer Picture of the Day is available &#8230;</string>
    <string name="apod_notification_late_day">Late in the day</string>
    <string name="apod_notification_early_day">Early in the day</string>
    <string name="apod_notification_never">Never</string>

    <string name="share_x">Share %s &#8230;</string>

    <string name="failed_to_start_youtube_video">Failed to start YouTube video</string>

    <string name="app_version">Version %1$s (%2$s)</string>
    <string name="developer_name">Gábor Vass</string>
</resources>
