<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/apod_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_large"
            app:cardCornerRadius="@dimen/card_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_content_height">

                    <FrameLayout
                        android:id="@+id/apod_response"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/card_content_height">

                            <ImageView
                                android:id="@+id/apod_image"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:foreground="?attr/selectableItemBackground"
                                android:scaleType="centerCrop" />

                            <ImageView
                                android:id="@+id/apod_indicator"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center" />

                        </FrameLayout>

                        <ImageView
                            android:id="@+id/apod_media_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:background="@drawable/translucent_bottom_to_transparent_top"
                            android:orientation="vertical"
                            android:paddingBottom="@dimen/padding_medium"
                            android:paddingLeft="@dimen/padding_large"
                            android:paddingRight="@dimen/padding_large"
                            android:paddingTop="@dimen/padding_medium">

                            <Space
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/padding_large" />

                            <TextView
                                android:id="@+id/apod_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textStyle="bold"
                                tools:text="Title of the card" />

                            <TextView
                                android:id="@+id/apod_sub_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                tools:text="various • details • here" />

                        </LinearLayout>

                    </FrameLayout>

                    <ProgressBar
                        android:id="@+id/apod_progress_bar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/padding_large" />

                    <LinearLayout
                        android:id="@+id/apod_error_message_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/padding_large"
                        android:foreground="?attr/selectableItemBackgroundBorderless"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/padding_medium"
                            android:src="@drawable/ic_error_white_60dp_105dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="@dimen/padding_medium"
                            android:text="@string/something_went_wrong_try_again" />

                    </LinearLayout>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/apod_yesterday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="?attr/selectableItemBackground"
                        android:padding="@dimen/padding_large"
                        android:text="@string/see_the_day_before"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:id="@+id/apod_tomorrow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="?attr/selectableItemBackground"
                        android:padding="@dimen/padding_large"
                        android:text="@string/see_the_next_day"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:id="@+id/apod_date_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="?attr/selectableItemBackground"
                        android:padding="@dimen/padding_large"
                        android:text="@string/search_for_any_date"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/fab_bottom_margin" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
